metadata/sdx_pull_1595230153817/unpackaged/objects/MyExpenses__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Accomodation</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MyExpense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EXP-{00000}</displayFormat>
        <label>MyExpenses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>M&lt;yExpenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>